--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev --turbopack",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -13,7 +12,7 @@
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
     "next": "15.6.0-canary.16",
-    "next-auth": "5.0.0-beta.25",
+    "next-auth": "5.0.0-beta.29",
     "postcss": "8.5.1",
     "postgres": "^3.4.6",
     "react": "latest",
